<!-- Copyright (c) 2023 Kosuke Suzuki -->
<!-- Released under the MIT license -->
<!-- https://opensource.org/licenses/mit-license.php -->

<package format="2">
  <name>ndt_localizer</name>
  <version>0.0.0</version>
  <description>The ndt_localizer package</description>

  <maintainer email="kosuke@todo.todo">kosuke</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ndt_omp</depend>

</package>
